# babbab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
babbab/: __init__.py  core.py  pyproject.toml  stats.py  viz.py
notebooks/: babbab_notebook.ipynb  make_nicer_plot.ipynb  should_be_pytest.ipynb
requirements/: requirements-dev.txt  requirements.txt
