[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "babbab"
authors = [{name = "Juan Gonz\u00e1lez-Vallinas", email = "juan@multilayer.io"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pandas==1.3.3",
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "jupyter==1.0.0",
    "jupyterlab==3.1.14",
    "black==21.9b0",
    "flake8==3.9.2",
    "isort==5.9.3",
    "pytest==6.2.5"
]

[project.urls]
Home = "https://github.com/multilayer-io/jupancon"